--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://liangjinghoe:pQvMoYFkyqWolsW5@cluster0.lcfg1gu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://liangjinghoe:pQvMoYFkyqWolsW5@cluster0.lcfg1gu.mongodb.net/cluster0?retryWrites=true&w=majority&appName=Cluster0"
