--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://liangjinghoe:pQvMoYFkyqWolsW5@cluster0.lcfg1gu.mongodb.net/Cluster0?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://liangjinghoe:pQvMoYFkyqWolsW5@cluster0.lcfg1gu.mongodb.net/fcc-mongodb-and-mongoose?retryWrites=true&w=majority&appName=Cluster0"
